wip lotus checkout styles, adds lotus fonts, adds lotus button hover transitions

--- a/config.json
+++ b/config.json
@@ -126,8 +126,8 @@
     "default_image_brand": "img/BrandDefault.gif",
     "default_image_product": "img/ProductDefault.gif",
     "default_image_gift_certificate": "img/GiftCertificate.png",
-    "body-font": "Google_Karla_400",
-    "headings-font": "Google_Montserrat_400",
+    "body-font": "Google_Jost_400",
+    "headings-font": "Google_Playfair+Display_600",
     "fontSize-root": 14,
     "fontSize-h1": 28,
     "fontSize-h2": 25,
@@ -264,24 +264,24 @@
     "optimizedCheckout-logo-size": "250x100",
     "optimizedCheckout-logo-position": "left",
     "optimizedCheckout-headingPrimary-color": "#333333",
-    "optimizedCheckout-headingPrimary-font": "Google_Montserrat_700",
+    "optimizedCheckout-headingPrimary-font": "Google_Playfair+Display_600",
     "optimizedCheckout-headingSecondary-color": "#333333",
-    "optimizedCheckout-headingSecondary-font": "Google_Montserrat_700",
+    "optimizedCheckout-headingSecondary-font": "Google_Playfair+Display_600",
     "optimizedCheckout-body-backgroundColor": "#ffffff",
-    "optimizedCheckout-colorFocus": "#4496f6",
+    "optimizedCheckout-colorFocus": "#333333",
     "optimizedCheckout-contentPrimary-color": "#333333",
-    "optimizedCheckout-contentPrimary-font": "Google_Montserrat_500",
+    "optimizedCheckout-contentPrimary-font": "Google_Jost_500",
     "optimizedCheckout-contentSecondary-color": "#757575",
-    "optimizedCheckout-contentSecondary-font": "Google_Montserrat_500",
-    "optimizedCheckout-buttonPrimary-font": "Google_Montserrat_500",
-    "optimizedCheckout-buttonPrimary-color": "#ffffff",
-    "optimizedCheckout-buttonPrimary-colorHover": "#ffffff",
-    "optimizedCheckout-buttonPrimary-colorActive": "#ffffff",
-    "optimizedCheckout-buttonPrimary-backgroundColor": "#333333",
-    "optimizedCheckout-buttonPrimary-backgroundColorHover": "#666666",
+    "optimizedCheckout-contentSecondary-font": "Google_Jost_500",
+    "optimizedCheckout-buttonPrimary-font": "Google_Jost_500",
+    "optimizedCheckout-buttonPrimary-color": "#333333",
+    "optimizedCheckout-buttonPrimary-colorHover": "#333333",
+    "optimizedCheckout-buttonPrimary-colorActive": "#333333",
+    "optimizedCheckout-buttonPrimary-backgroundColor": "#9dff5c",
+    "optimizedCheckout-buttonPrimary-backgroundColorHover": "#e8ffdc",
     "optimizedCheckout-buttonPrimary-backgroundColorActive": "#000000",
-    "optimizedCheckout-buttonPrimary-borderColor": "#333333",
-    "optimizedCheckout-buttonPrimary-borderColorHover": "transparent",
+    "optimizedCheckout-buttonPrimary-borderColor": "#9dff5c",
+    "optimizedCheckout-buttonPrimary-borderColorHover": "#9dff5c",
     "optimizedCheckout-buttonPrimary-borderColorActive": "transparent",
     "optimizedCheckout-buttonPrimary-borderColorDisabled": "transparent",
     "optimizedCheckout-buttonPrimary-backgroundColorDisabled": "#cccccc",
@@ -290,18 +290,18 @@
     "optimizedCheckout-formChecklist-color": "#333333",
     "optimizedCheckout-formChecklist-borderColor": "#cccccc",
     "optimizedCheckout-formChecklist-backgroundColorSelected": "#f5f5f5",
-    "optimizedCheckout-buttonSecondary-font": "Google_Montserrat_500",
-    "optimizedCheckout-buttonSecondary-color": "#333333",
+    "optimizedCheckout-buttonSecondary-font": "Google_Jost_500",
+    "optimizedCheckout-buttonSecondary-color": "#ffffff",
     "optimizedCheckout-buttonSecondary-colorHover": "#333333",
-    "optimizedCheckout-buttonSecondary-colorActive": "#000000",
-    "optimizedCheckout-buttonSecondary-backgroundColor": "#ffffff",
-    "optimizedCheckout-buttonSecondary-borderColor": "#cccccc",
-    "optimizedCheckout-buttonSecondary-backgroundColorHover": "#f5f5f5",
-    "optimizedCheckout-buttonSecondary-backgroundColorActive": "#e5e5e5",
-    "optimizedCheckout-buttonSecondary-borderColorHover": "#999999",
-    "optimizedCheckout-buttonSecondary-borderColorActive": "#757575",
+    "optimizedCheckout-buttonSecondary-colorActive": "#333333",
+    "optimizedCheckout-buttonSecondary-backgroundColor": "#333333",
+    "optimizedCheckout-buttonSecondary-borderColor": "#333333",
+    "optimizedCheckout-buttonSecondary-backgroundColorHover": "#333333",
+    "optimizedCheckout-buttonSecondary-backgroundColorActive": "#333333",
+    "optimizedCheckout-buttonSecondary-borderColorHover": "#333333",
+    "optimizedCheckout-buttonSecondary-borderColorActive": "#333333",
     "optimizedCheckout-link-color": "#476bef",
-    "optimizedCheckout-link-font": "Google_Montserrat_500",
+    "optimizedCheckout-link-font": "Google_Jost_500",
     "optimizedCheckout-discountBanner-backgroundColor": "#e5e5e5",
     "optimizedCheckout-discountBanner-textColor": "#333333",
     "optimizedCheckout-discountBanner-iconColor": "#333333",
@@ -316,7 +316,7 @@
     "optimizedCheckout-formField-placeholderColor": "#999999",
     "optimizedCheckout-formField-backgroundColor": "#ffffff",
     "optimizedCheckout-formField-errorColor": "#d14343",
-    "optimizedCheckout-formField-inputControlColor": "#476bef",
+    "optimizedCheckout-formField-inputControlColor": "#333333",
     "optimizedCheckout-step-borderColor": "#dddddd",
     "optimizedCheckout-header-borderColor": "#dddddd",
     "optimizedCheckout-header-textColor": "#333333",
@@ -460,8 +460,8 @@
       "settings": {
         "homepage_featured_products_count": 6,
         "homepage_featured_products_column_count": 3,
-        "body-font": "Google_Source+Sans+Pro_400",
-        "headings-font": "Google_Roboto_400",
+        "body-font": "Google_Jost_400",
+        "headings-font": "Google_Playfair+Display_600",
         "color-textBase": "#ffffff",
         "color-textBase--hover": "#bbbbbb",
         "color-textBase--active": "#999999",
@@ -582,16 +582,16 @@
         "spinner-borderColor-light": "#fab9a3",
         "optimizedCheckout-header-backgroundColor": "#555555",
         "optimizedCheckout-headingPrimary-color": "#eeeeee",
-        "optimizedCheckout-headingPrimary-font": "Google_Montserrat_700",
+        "optimizedCheckout-headingPrimary-font": "Google_Playfair+Display_600",
         "optimizedCheckout-headingSecondary-color": "#ffffff",
-        "optimizedCheckout-headingSecondary-font": "Google_Montserrat_700",
+        "optimizedCheckout-headingSecondary-font": "Google_Playfair+Display_600",
         "optimizedCheckout-body-backgroundColor": "#444444",
-        "optimizedCheckout-colorFocus": "#79babd",
+        "optimizedCheckout-colorFocus": "#333333",
         "optimizedCheckout-contentPrimary-color": "#ffffff",
-        "optimizedCheckout-contentPrimary-font": "Google_Source+Sans+Pro_400",
+        "optimizedCheckout-contentPrimary-font": "Google_Jost_500",
         "optimizedCheckout-contentSecondary-color": "#bbbbbb",
-        "optimizedCheckout-contentSecondary-font": "Google_Source+Sans+Pro_400",
-        "optimizedCheckout-buttonPrimary-font": "Google_Source+Sans+Pro_400",
+        "optimizedCheckout-contentSecondary-font": "Google_Jost_500",
+        "optimizedCheckout-buttonPrimary-font": "Google_Jost_500",
         "optimizedCheckout-buttonPrimary-color": "#333333",
         "optimizedCheckout-buttonPrimary-colorHover": "#222222",
         "optimizedCheckout-buttonPrimary-colorActive": "#222222",
@@ -608,18 +608,18 @@
         "optimizedCheckout-formChecklist-color": "#ffffff",
         "optimizedCheckout-formChecklist-borderColor": "#757575",
         "optimizedCheckout-formChecklist-backgroundColorSelected": "#505050",
-        "optimizedCheckout-buttonSecondary-font": "Google_Source+Sans+Pro_400",
+        "optimizedCheckout-buttonSecondary-font": "Google_Jost_500",
         "optimizedCheckout-buttonSecondary-color": "#ffffff",
         "optimizedCheckout-buttonSecondary-colorHover": "#ffffff",
         "optimizedCheckout-buttonSecondary-colorActive": "#ffffff",
-        "optimizedCheckout-buttonSecondary-backgroundColor": "#444444",
-        "optimizedCheckout-buttonSecondary-borderColor": "#757575",
+        "optimizedCheckout-buttonSecondary-backgroundColor": "#333333",
+        "optimizedCheckout-buttonSecondary-borderColor": "#333333",
         "optimizedCheckout-buttonSecondary-backgroundColorHover": "#333333",
-        "optimizedCheckout-buttonSecondary-backgroundColorActive": "#222222",
-        "optimizedCheckout-buttonSecondary-borderColorHover": "#757575",
-        "optimizedCheckout-buttonSecondary-borderColorActive": "#666666",
+        "optimizedCheckout-buttonSecondary-backgroundColorActive": "#333333",
+        "optimizedCheckout-buttonSecondary-borderColorHover": "#333333",
+        "optimizedCheckout-buttonSecondary-borderColorActive": "#333333",
         "optimizedCheckout-link-color": "#ff957f",
-        "optimizedCheckout-link-font": "Google_Source+Sans+Pro_400",
+        "optimizedCheckout-link-font": "Google_Jost_500",
         "optimizedCheckout-discountBanner-backgroundColor": "#e5e5e5",
         "optimizedCheckout-discountBanner-textColor": "#333333",
         "optimizedCheckout-discountBanner-iconColor": "#333333",
@@ -634,7 +634,7 @@
         "optimizedCheckout-formField-placeholderColor": "#999999",
         "optimizedCheckout-formField-backgroundColor": "#404040",
         "optimizedCheckout-formField-errorColor": "#ffdb6f",
-        "optimizedCheckout-formField-inputControlColor": "#79babd",
+        "optimizedCheckout-formField-inputControlColor": "#333333",
         "optimizedCheckout-step-borderColor": "#757575",
         "optimizedCheckout-header-borderColor": "#666666",
         "optimizedCheckout-header-textColor": "#eeeeee",
@@ -670,8 +670,8 @@
         ]
       },
       "settings": {
-        "body-font": "Google_Roboto_400",
-        "headings-font": "Google_Volkhov_400",
+        "body-font": "Google_Jost_400",
+        "headings-font": "Google_Playfair+Display_600",
         "color-textBase": "#74685c",
         "color-textBase--hover": "#4f3f2f",
         "color-textBase--active": "#4f3f2f",
@@ -792,16 +792,16 @@
         "spinner-borderColor-light": "#f2eee9",
         "optimizedCheckout-header-backgroundColor": "#f2eee9",
         "optimizedCheckout-headingPrimary-color": "#4f3f2f",
-        "optimizedCheckout-headingPrimary-font": "Google_Volkhov_400",
+        "optimizedCheckout-headingPrimary-font": "Google_Playfair+Display_600",
         "optimizedCheckout-headingSecondary-color": "#74685c",
-        "optimizedCheckout-headingSecondary-font": "Google_Volkhov_400",
+        "optimizedCheckout-headingSecondary-font": "Google_Playfair+Display_600",
         "optimizedCheckout-body-backgroundColor": "#ffffff",
-        "optimizedCheckout-colorFocus": "#6791e6",
+        "optimizedCheckout-colorFocus": "#333333",
         "optimizedCheckout-contentPrimary-color": "#74685c",
-        "optimizedCheckout-contentPrimary-font": "Google_Montserrat_500",
+        "optimizedCheckout-contentPrimary-font": "Google_Jost_500",
         "optimizedCheckout-contentSecondary-color": "#917052",
-        "optimizedCheckout-contentSecondary-font": "Google_Montserrat_500",
-        "optimizedCheckout-buttonPrimary-font": "Google_Montserrat_500",
+        "optimizedCheckout-contentSecondary-font": "Google_Jost_500",
+        "optimizedCheckout-buttonPrimary-font": "Google_Jost_500",
         "optimizedCheckout-buttonPrimary-color": "#ffffff",
         "optimizedCheckout-buttonPrimary-colorHover": "#ffffff",
         "optimizedCheckout-buttonPrimary-colorActive": "#ffffff",
@@ -818,18 +818,18 @@
         "optimizedCheckout-formChecklist-color": "#4f3f2f",
         "optimizedCheckout-formChecklist-borderColor": "#ccbdad",
         "optimizedCheckout-formChecklist-backgroundColorSelected": "#f2eee9",
-        "optimizedCheckout-buttonSecondary-font": "Google_Montserrat_500",
-        "optimizedCheckout-buttonSecondary-color": "#4f3f2f",
-        "optimizedCheckout-buttonSecondary-colorHover": "#4f3f2f",
-        "optimizedCheckout-buttonSecondary-colorActive": "#4f3f2f",
-        "optimizedCheckout-buttonSecondary-backgroundColor": "#ffffff",
-        "optimizedCheckout-buttonSecondary-borderColor": "#ccbdae",
-        "optimizedCheckout-buttonSecondary-backgroundColorHover": "#f8f6f4",
-        "optimizedCheckout-buttonSecondary-backgroundColorActive": "#f2eee9",
-        "optimizedCheckout-buttonSecondary-borderColorHover": "#917052",
-        "optimizedCheckout-buttonSecondary-borderColorActive": "#917052",
+        "optimizedCheckout-buttonSecondary-font": "Google_Jost_500",
+        "optimizedCheckout-buttonSecondary-color": "#ffffff",
+        "optimizedCheckout-buttonSecondary-colorHover": "#333333",
+        "optimizedCheckout-buttonSecondary-colorActive": "#333333",
+        "optimizedCheckout-buttonSecondary-backgroundColor": "#333333",
+        "optimizedCheckout-buttonSecondary-borderColor": "#333333",
+        "optimizedCheckout-buttonSecondary-backgroundColorHover": "#333333",
+        "optimizedCheckout-buttonSecondary-backgroundColorActive": "#333333",
+        "optimizedCheckout-buttonSecondary-borderColorHover": "#333333",
+        "optimizedCheckout-buttonSecondary-borderColorActive": "#333333",
         "optimizedCheckout-link-color": "#bd5b00",
-        "optimizedCheckout-link-font": "Google_Montserrat_500",
+        "optimizedCheckout-link-font": "Google_Jost_500",
         "optimizedCheckout-discountBanner-backgroundColor": "#f2eee9",
         "optimizedCheckout-discountBanner-textColor": "#333333",
         "optimizedCheckout-discountBanner-iconColor": "#333333",
@@ -844,7 +844,7 @@
         "optimizedCheckout-formField-placeholderColor": "#999999",
         "optimizedCheckout-formField-backgroundColor": "#ffffff",
         "optimizedCheckout-formField-errorColor": "#d14343",
-        "optimizedCheckout-formField-inputControlColor": "#bd5b00",
+        "optimizedCheckout-formField-inputControlColor": "#333333",
         "optimizedCheckout-step-borderColor": "#ccbdad",
         "optimizedCheckout-header-borderColor": "#e0d7ce",
         "optimizedCheckout-header-textColor": "#74685c",
