--- a/config.json
+++ b/config.json
@@ -127,7 +127,7 @@
     "default_image_product": "img/ProductDefault.gif",
     "default_image_gift_certificate": "img/GiftCertificate.png",
     "body-font": "Google_Jost_400",
-    "headings-font": "Google_Playfair+Display_600",
+    "headings-font": "Google_Jost_500",
     "fontSize-root": 14,
     "fontSize-h1": 28,
     "fontSize-h2": 25,
@@ -142,9 +142,9 @@
     "color-textSecondary": "#757575",
     "color-textSecondary--hover": "#333333",
     "color-textSecondary--active": "#333333",
-    "color-textLink": "#333333",
-    "color-textLink--hover": "#757575",
-    "color-textLink--active": "#757575",
+    "color-textLink": "#6E9365",
+    "color-textLink--hover": "#6E9365",
+    "color-textLink--active": "#6E9365",
     "color-textHeading": "#444444",
     "color-primary": "#757575",
     "color-primaryDark": "#666666",
@@ -264,9 +264,9 @@
     "optimizedCheckout-logo-size": "250x100",
     "optimizedCheckout-logo-position": "left",
     "optimizedCheckout-headingPrimary-color": "#333333",
-    "optimizedCheckout-headingPrimary-font": "Google_Playfair+Display_600",
+    "optimizedCheckout-headingPrimary-font": "Google_Jost_500",
     "optimizedCheckout-headingSecondary-color": "#333333",
-    "optimizedCheckout-headingSecondary-font": "Google_Playfair+Display_600",
+    "optimizedCheckout-headingSecondary-font": "Google_Jost_500",
     "optimizedCheckout-body-backgroundColor": "#ffffff",
     "optimizedCheckout-colorFocus": "#333333",
     "optimizedCheckout-contentPrimary-color": "#333333",
@@ -274,14 +274,14 @@
     "optimizedCheckout-contentSecondary-color": "#757575",
     "optimizedCheckout-contentSecondary-font": "Google_Jost_500",
     "optimizedCheckout-buttonPrimary-font": "Google_Jost_500",
-    "optimizedCheckout-buttonPrimary-color": "#333333",
-    "optimizedCheckout-buttonPrimary-colorHover": "#333333",
-    "optimizedCheckout-buttonPrimary-colorActive": "#333333",
-    "optimizedCheckout-buttonPrimary-backgroundColor": "#9dff5c",
-    "optimizedCheckout-buttonPrimary-backgroundColorHover": "#e8ffdc",
+    "optimizedCheckout-buttonPrimary-color": "#ffffff",
+    "optimizedCheckout-buttonPrimary-colorHover": "#ffffff",
+    "optimizedCheckout-buttonPrimary-colorActive": "#ffffff",
+    "optimizedCheckout-buttonPrimary-backgroundColor": "#6E9365",
+    "optimizedCheckout-buttonPrimary-backgroundColorHover": "#b0c3ac",
     "optimizedCheckout-buttonPrimary-backgroundColorActive": "#000000",
-    "optimizedCheckout-buttonPrimary-borderColor": "#9dff5c",
-    "optimizedCheckout-buttonPrimary-borderColorHover": "#9dff5c",
+    "optimizedCheckout-buttonPrimary-borderColor": "#6E9365",
+    "optimizedCheckout-buttonPrimary-borderColorHover": "#6E9365",
     "optimizedCheckout-buttonPrimary-borderColorActive": "transparent",
     "optimizedCheckout-buttonPrimary-borderColorDisabled": "transparent",
     "optimizedCheckout-buttonPrimary-backgroundColorDisabled": "#cccccc",
@@ -300,7 +300,7 @@
     "optimizedCheckout-buttonSecondary-backgroundColorActive": "#333333",
     "optimizedCheckout-buttonSecondary-borderColorHover": "#333333",
     "optimizedCheckout-buttonSecondary-borderColorActive": "#333333",
-    "optimizedCheckout-link-color": "#476bef",
+    "optimizedCheckout-link-color": "#6E9365",
     "optimizedCheckout-link-font": "Google_Jost_500",
     "optimizedCheckout-discountBanner-backgroundColor": "#e5e5e5",
     "optimizedCheckout-discountBanner-textColor": "#333333",
@@ -322,7 +322,7 @@
     "optimizedCheckout-header-textColor": "#333333",
     "optimizedCheckout-loadingToaster-backgroundColor": "#333333",
     "optimizedCheckout-loadingToaster-textColor": "#ffffff",
-    "optimizedCheckout-link-hoverColor": "#002fe1",
+    "optimizedCheckout-link-hoverColor": "#6E9365",
     "product_sale_badges": "none",
     "color_badge_product_sale_badges": "#007dc6",
     "color_text_product_sale_badges": "#ffffff",
@@ -461,7 +461,7 @@
         "homepage_featured_products_count": 6,
         "homepage_featured_products_column_count": 3,
         "body-font": "Google_Jost_400",
-        "headings-font": "Google_Playfair+Display_600",
+        "headings-font": "Google_Jost_500",
         "color-textBase": "#ffffff",
         "color-textBase--hover": "#bbbbbb",
         "color-textBase--active": "#999999",
@@ -582,9 +582,9 @@
         "spinner-borderColor-light": "#fab9a3",
         "optimizedCheckout-header-backgroundColor": "#555555",
         "optimizedCheckout-headingPrimary-color": "#eeeeee",
-        "optimizedCheckout-headingPrimary-font": "Google_Playfair+Display_600",
+        "optimizedCheckout-headingPrimary-font": "Google_Jost_500",
         "optimizedCheckout-headingSecondary-color": "#ffffff",
-        "optimizedCheckout-headingSecondary-font": "Google_Playfair+Display_600",
+        "optimizedCheckout-headingSecondary-font": "Google_Jost_500",
         "optimizedCheckout-body-backgroundColor": "#444444",
         "optimizedCheckout-colorFocus": "#333333",
         "optimizedCheckout-contentPrimary-color": "#ffffff",
@@ -596,7 +596,7 @@
         "optimizedCheckout-buttonPrimary-colorHover": "#222222",
         "optimizedCheckout-buttonPrimary-colorActive": "#222222",
         "optimizedCheckout-buttonPrimary-backgroundColor": "#ff957f",
-        "optimizedCheckout-buttonPrimary-backgroundColorHover": "#f2836d",
+        "optimizedCheckout-buttonPrimary-backgroundColorHover": "#b0c3ac",
         "optimizedCheckout-buttonPrimary-backgroundColorActive": "#e5735c",
         "optimizedCheckout-buttonPrimary-borderColor": "#ff957f",
         "optimizedCheckout-buttonPrimary-borderColorHover": "#f2836d",
@@ -671,7 +671,7 @@
       },
       "settings": {
         "body-font": "Google_Jost_400",
-        "headings-font": "Google_Playfair+Display_600",
+        "headings-font": "Google_Jost_500",
         "color-textBase": "#74685c",
         "color-textBase--hover": "#4f3f2f",
         "color-textBase--active": "#4f3f2f",
@@ -792,9 +792,9 @@
         "spinner-borderColor-light": "#f2eee9",
         "optimizedCheckout-header-backgroundColor": "#f2eee9",
         "optimizedCheckout-headingPrimary-color": "#4f3f2f",
-        "optimizedCheckout-headingPrimary-font": "Google_Playfair+Display_600",
+        "optimizedCheckout-headingPrimary-font": "Google_Jost_500",
         "optimizedCheckout-headingSecondary-color": "#74685c",
-        "optimizedCheckout-headingSecondary-font": "Google_Playfair+Display_600",
+        "optimizedCheckout-headingSecondary-font": "Google_Jost_500",
         "optimizedCheckout-body-backgroundColor": "#ffffff",
         "optimizedCheckout-colorFocus": "#333333",
         "optimizedCheckout-contentPrimary-color": "#74685c",
@@ -806,7 +806,7 @@
         "optimizedCheckout-buttonPrimary-colorHover": "#ffffff",
         "optimizedCheckout-buttonPrimary-colorActive": "#ffffff",
         "optimizedCheckout-buttonPrimary-backgroundColor": "#4f3f2f",
-        "optimizedCheckout-buttonPrimary-backgroundColorHover": "#74685c",
+        "optimizedCheckout-buttonPrimary-backgroundColorHover": "#b0c3ac",
         "optimizedCheckout-buttonPrimary-backgroundColorActive": "#917052",
         "optimizedCheckout-buttonPrimary-borderColor": "#4f3f2f",
         "optimizedCheckout-buttonPrimary-borderColorHover": "#74685c",
