--- a/package.json
+++ b/package.json
@@ -73,5 +73,8 @@
     "test": "npx jest",
     "stylelint": "npx stylelint **/*.scss",
     "stylelint:fix": "npx stylelint --fix **/*.scss"
+  },
+  "volta": {
+    "node": "20.16.0"
   }
 }
