updates checkout styles

--- a/config.json
+++ b/config.json
@@ -127,7 +127,7 @@
     "default_image_product": "img/ProductDefault.gif",
     "default_image_gift_certificate": "img/GiftCertificate.png",
     "body-font": "Google_Jost_400",
-    "headings-font": "Google_Jost_500",
+    "headings-font": "Google_Playfair+Display_400",
     "fontSize-root": 14,
     "fontSize-h1": 28,
     "fontSize-h2": 25,
@@ -268,7 +268,7 @@
     "optimizedCheckout-headingSecondary-color": "#333333",
     "optimizedCheckout-headingSecondary-font": "Google_Jost_500",
     "optimizedCheckout-body-backgroundColor": "#ffffff",
-    "optimizedCheckout-colorFocus": "#333333",
+    "optimizedCheckout-colorFocus": "#6E9365",
     "optimizedCheckout-contentPrimary-color": "#333333",
     "optimizedCheckout-contentPrimary-font": "Google_Jost_500",
     "optimizedCheckout-contentSecondary-color": "#757575",
@@ -278,7 +278,7 @@
     "optimizedCheckout-buttonPrimary-colorHover": "#ffffff",
     "optimizedCheckout-buttonPrimary-colorActive": "#ffffff",
     "optimizedCheckout-buttonPrimary-backgroundColor": "#6E9365",
-    "optimizedCheckout-buttonPrimary-backgroundColorHover": "#b0c3ac",
+    "optimizedCheckout-buttonPrimary-backgroundColorHover": "#8aaa83",
     "optimizedCheckout-buttonPrimary-backgroundColorActive": "#000000",
     "optimizedCheckout-buttonPrimary-borderColor": "#6E9365",
     "optimizedCheckout-buttonPrimary-borderColorHover": "#6E9365",
@@ -295,11 +295,11 @@
     "optimizedCheckout-buttonSecondary-colorHover": "#ffffff",
     "optimizedCheckout-buttonSecondary-colorActive": "#ffffff",
     "optimizedCheckout-buttonSecondary-backgroundColor": "#ffffff",
-    "optimizedCheckout-buttonSecondary-borderColor": "#333333",
-    "optimizedCheckout-buttonSecondary-backgroundColorHover": "#333333",
+    "optimizedCheckout-buttonSecondary-borderColor": "#d1d1d1",
+    "optimizedCheckout-buttonSecondary-backgroundColorHover": "#EDEDED",
     "optimizedCheckout-buttonSecondary-backgroundColorActive": "#333333",
-    "optimizedCheckout-buttonSecondary-borderColorHover": "#333333",
-    "optimizedCheckout-buttonSecondary-borderColorActive": "#333333",
+    "optimizedCheckout-buttonSecondary-borderColorHover": "#d1d1d1",
+    "optimizedCheckout-buttonSecondary-borderColorActive": "#EDEDED",
     "optimizedCheckout-link-color": "#6E9365",
     "optimizedCheckout-link-font": "Google_Jost_500",
     "optimizedCheckout-discountBanner-backgroundColor": "#e5e5e5",
