update button colors for Apple Pay and Google Pay in config.json

--- a/config.json
+++ b/config.json
@@ -135,7 +135,7 @@
     "fontSize-h4": 20,
     "fontSize-h5": 15,
     "fontSize-h6": 13,
-    "applePay-button": "black",
+    "applePay-button": "white",
     "color-textBase": "#333333",
     "color-textBase--hover": "#757575",
     "color-textBase--active": "#757575",
@@ -394,7 +394,7 @@
     "checkout-paymentbuttons-paypal-size": "large",
     "checkout-paymentbuttons-paypal-label": "pay",
     "paymentbuttons-number-of-buttons": 1,
-    "googlepay-button-color": "black",
+    "googlepay-button-color": "white",
     "afterpay-button-color": "black-mint",
     "amazon-button-color": "Gold",
     "masterpass-button-color": "black",
